# ai-investment-os

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: idx_demo.json
data/universe/: lq45-demo.json  lq45.json
docs/: README.md
docs/adr/: 0001-in-house-graph-runtime.md  0002-deterministic-core-llm-behind-port.md
docs/fase-1-product-research/: 01-vision-product-strategy.md  02-product-requirements-document.md  03-domain-research-pasar-modal-indonesia.md  04-competitive-analysis.md  05-stakeholder-user-persona.md
docs/fase-2-ai-architecture/: 01-multi-agent-architecture.md  02-langgraph-workflow.md  03-agent-specifications.md  04-prompt-engineering-guide.md  05-rag-knowledge-base-design.md  06-memory-architecture.md  07-decision-engine.md  08-confidence-engine.md  09-explainability-engine.md
prompts/: cio_narrative@v1.md  corporate_action_analyst@v1.md  news_analyst@v1.md
tests/: conftest.py  test_alerts.py  test_analysis_flow.py  test_api.py  test_backtest.py  test_cli.py  test_confidence_engine.py  test_corporate_action_analyst.py  test_decision_engine.py  test_eval_framework.py  test_graph_runtime.py  test_hardening.py  test_live_kb.py  test_llm_layer.py  test_llm_news_analyst.py  test_market_pipeline.py  test_narrator.py  test_new_analysts.py  test_news_pipeline.py  test_outcomes.py  test_persistence.py  test_rss_and_sentiment.py  test_scheduler.py  test_strategy.py  test_subscriptions_broadcast.py  test_webhook_alerts.py
(+114 files in other folders)
